<resources>
    <string name="app_name">InnoApp</string>
    <string name="notification">Оповещение</string>
    <string name="email_wrong">Неправильный E-Mail</string>
    <string name="event_card_image_description">Изображение события</string>
    <string name="event_card_participation_off">Принять участие</string>
    <string name="event_card_participation_on">Вы участвуете</string>
    <string name="event_card_count_visitors_text">Идёт</string>
    <string name="txt_date_main_menu">Апрель 2</string>
    <string name="txt_greeting_main_menu">Привет, студент!</string>
    <string name="btn_maps_main_menu">Карты</string>
    <string name="btn_faq_main_menu">FAQ</string>
    <string name="btn_voting_main_menu">Голосования</string>
    <string name="btn_schedule_main_menu">Расписание</string>
    <string name="txt_description_main_menu">Это твой персональный баркод. Пожалуйста, отсканируйте его в столовой</string>
    <string name="txt_barcode_main_menu">000</string>
    <string name="txt_login_email">Email</string>
    <string name="btn_login">Войти</string>
    <string name="event_card_count_visitors_text">Идёт</string>
    <string name="txt_votes">Голосования</string>
    <string name="txt_time">2 часа</string>
    <string name="txt_cv_date">31 сентября 1970</string>
    <string name="txt_cv_people">1000 человек</string>
    <string name="txt_cv_time">00:00</string>
    <string name="txt_cv_name">Название события</string>
    <string name="txt_cv_desc">012345678901234567890123456789012345678901234567890123456789012345</string>
    <string name="txt_cv_location">Место</string>
    <string name="txt_faq_title">FAQ</string>
    <string name="txt_maps_title">Maps</string>
    <string name="txt_profile_title">Profile</string>
    <string name="txt_maps_email">eMail</string>
    <string name="txt_icon_a_profile">A</string>
    <string name="txt_profile_language_value">RU</string>
    <string name="txt_profile_language">Язык</string>
    <string name="txt_theme">Тёмная тема</string>
    <string name="txt_theme_value">OFF</string>
    <string name="txt_theme_value_on">ON</string>
    <string name="txt_profile_notify">Уведомления</string>
    <string name="txt_notif_off">OFF</string>
    <string name="txt_notif_on">ON</string>
    <string name="txt_logout">Выход</string>
</resources>
