<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EventCardActivity"
    android:background="#fff">

    <ToggleButton
        android:id="@+id/cardParticipation"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom|fill_horizontal"
        android:background="@color/inno_green"
        android:onClick="onMyButtonClick"
        android:textColor="@color/background1"
        android:textColorHint="@color/amount"
        android:textOff="@string/event_card_participation_off"
        android:textOn="@string/event_card_participation_on"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/cardDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="114dp"
            android:text="2 часа"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/cardDate"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="148dp"
            android:text="31 сентября 1970"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/cardCountVisitors"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="80dp"
            android:text="1000 человек"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/cardName"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start|top"
            android:layout_marginTop="16dp"
            android:text="Название события"
            android:textSize="24sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/cardDescription"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:text="Описание"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/cardPlace"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="182dp"
            android:text="Место"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/cardCountVisitorsText"
            android:layout_width="48dp"
            android:layout_height="18dp"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="80dp"
            android:text="@string/event_card_count_visitors_text"
            android:textSize="18sp"
            android:textColor="#000"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>