<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fab_setting"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/txt_date_main_menu"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/txt_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_greeting_main_menu"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_settings_white_18dp"
            app:backgroundTint="#316FC1"
            app:fabCustomSize="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_maps"
                    android:layout_width="160dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_faq"
                    app:layout_constraintHorizontal_bias="0.564"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_schedule"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFF">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="94dp"
                            android:layout_marginBottom="34dp"
                            android:src="@drawable/icon_maps"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="102dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="24dp"
                            android:text="@string/btn_maps_main_menu"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3"
                            tools:ignore="SpUsage"
                            android:textColor="#000"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_faq"
                    android:layout_width="160dp"
                    android:layout_height="110dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_maps"
                    app:layout_constraintTop_toBottomOf="@+id/btn_voting"
                    app:layout_constraintVertical_bias="1.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFF">

                        <ImageView

                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="94dp"
                            android:layout_marginBottom="34dp"
                            android:src="@drawable/icon_faq"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="110dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="24dp"
                            android:text="@string/btn_faq_main_menu"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView4"
                            tools:ignore="SpUsage"
                            android:textColor="#000"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_voting"
                    android:layout_width="160dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_faq"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_schedule"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFF">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="94dp"
                            android:layout_marginBottom="34dp"
                            android:src="@drawable/icon_voting"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="93dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="24dp"
                            android:text="@string/btn_voting_main_menu"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.769"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView2"
                            app:layout_constraintVertical_bias="0.2"
                            tools:ignore="SpUsage"
                            android:textColor="#000"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_schedule"
                    android:layout_width="160dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_maps"
                    app:layout_constraintEnd_toStartOf="@+id/btn_voting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFF">

                        <ImageView

                            android:id="@+id/imageView5"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="94dp"
                            android:layout_marginBottom="34dp"
                            android:src="@drawable/icon_calendar"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="66dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="24dp"
                            android:text="@string/btn_schedule_main_menu"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView5"
                            tools:ignore="SpUsage"
                            android:textColor="#000"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_description_barcode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:text="@string/txt_description_main_menu"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textSize="20dp"
                                tools:ignore="SpUsage" />

                            <TextView
                                android:id="@+id/tvBarcode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@color/white"
                                android:onClick="onButtonClickBarcode"
                                android:text="@string/txt_barcode_main_menu"
                                android:textAlignment="center"
                                android:layout_marginTop="20dp"
                                android:textColor="@android:color/background_dark"
                                android:textSize="120dp"
                                tools:ignore="SpUsage" />
                        </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="bottom"
            android:src="@color/colorPrimary"
            tools:ignore="ContentDescription" />
    </FrameLayout>

</LinearLayout>
